Add scalable "my work" modal

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -161,6 +161,10 @@
 		letter-spacing: 0.2em;
 		text-transform: uppercase;
 	}
+	.normal-text {
+		text-transform: none !important;
+		letter-spacing:none !important; 
+	}
 
 		@media screen and (max-width: 1680px) {
 
@@ -223,7 +227,7 @@
 		}
 
 	h1 {
-		font-size: 1.85em;
+		font-size: 1.85em !important;
 		letter-spacing: 0.22em;
 		margin: 0 0 0.525em 0;
 	}
