Make PDF link point directly to the file, not own page

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
 										<div class="card-body">
 										  <h5 class="card-title">FSK Demodulator</h5>
 										  <p class="card-text">Designing and implementing a FSK Demodulator digitally on an Arduino microcontroller</p>
-										  <a href="#" class="btn btn-primary">Read<i class="icon fa-file-pdf"></i></a>
+										  <a href="{{ url_for('static',filename='pdfs/d8.pdf') }}" target="_blank" class="btn btn-primary">Read<i class="icon fa-file-pdf"></i></a>
 										</div>
 									  </div>
 								</div>
@@ -85,7 +85,7 @@
 										<div class="card-body">
 										  <h5 class="card-title">Designing an oscillator </h5>
 										  <p class="card-text">Designing and implementing an analog sinusoidal oscillator using an operational amplifier</p>
-										  <a href="#" class="btn btn-primary">Read<i class="icon fa-file-pdf"></i></a>
+										  <a href="{{ url_for('static',filename='pdfs/d7.pdf') }}" target="_blank" class="btn btn-primary">Read<i class="icon fa-file-pdf"></i></a>
 										</div>
 									  </div>									
 								</div>
@@ -95,7 +95,7 @@
 										<div class="card-body">
 										  <h5 class="card-title">Anti aliasing filter</h5>
 										  <p class="card-text">Designing and implemeting an analog anti-aliasing filter using an operational amplifier</p>
-										  <a href="#" class="btn btn-primary">Read<i class="icon fa-file-pdf"></i></a>
+										  <a href="{{ url_for('static',filename='pdfs/d6.pdf') }}" target="_blank" class="btn btn-primary">Read<i class="icon fa-file-pdf"></i></a>
 										</div>
 									  </div>									
 								</div>
@@ -105,10 +105,13 @@
 										<div class="card-body">
 										  <h5 class="card-title">Buffer circuit</h5>
 										  <p class="card-text">Designing and implementing a buffer circuit using a transistor based amplifier</p>
-										  <a href="#" class="btn btn-primary">Read<i class="icon fa-file-pdf"></i></a>
+										  <a href="{{ url_for('static',filename='pdfs/d5.pdf') }}" target="_blank" class="btn btn-primary">Read<i class="icon fa-file-pdf"></i></a>
 										</div>
 									  </div>									
 								</div>
+
+
+								
 							</div>
 						  </div>
 					
