--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Identity by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Jakob Vahlin</title>
@@ -68,7 +63,10 @@
 							<div class="row normal-text" style="padding-bottom: 2em;">
 								Below are some reports of projects I've done related to various courses at NTNU. Some (most) of the reports are in Norwegian.
 							</div>
+							<!-- Row 1-->
+							
 							<div class="row normal-text" style="padding-bottom: 2px;">
+								<!--Card 1-->
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 normal-text">
 									<div class="card" style="margin-bottom: 2px;">
 										<img class="card-img-top" src="{{ url_for('static',filename='images/d8header.png') }}" style="height: 105px;" alt="Card image cap">
@@ -79,6 +77,7 @@
 										</div>
 									  </div>
 								</div>
+								<!--Card 2-->
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 normal-text">
 									<div class="card" style="margin-bottom: 2px;">
 										<img class="card-img-top" src="{{ url_for('static',filename='images/d7header.png') }}" style="height: 105px;" alt="Card image cap">
@@ -89,6 +88,7 @@
 										</div>
 									  </div>									
 								</div>
+								<!--Card 3-->
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 normal-text">
 									<div class="card" style="margin-bottom: 2px;">
 										<img class="card-img-top" src="{{ url_for('static',filename='images/d6header.png') }}" style="height: 105px;" alt="Card image cap">
@@ -99,6 +99,7 @@
 										</div>
 									  </div>									
 								</div>
+								<!--Card 4-->
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 normal-text">
 									<div class="card" style="margin-bottom: 2px;">
 										<img class="card-img-top" src="{{ url_for('static',filename='images/d5header.png') }}" alt="Card image cap">
@@ -110,7 +111,9 @@
 									  </div>									
 								</div>
 							</div>
+							<!-- Row 2 -->
 							<div class="row normal-text">
+								<!--Card 5-->
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 normal-text">
 									<div class="card" style="margin-bottom: 2px;">
 										<img class="card-img-top" src="{{ url_for('static',filename='images/icheader.png') }}" alt="Card image cap">
@@ -121,7 +124,7 @@
 										</div>
 									  </div>									
 								</div>
-							
+								<!--Card 6-->
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 normal-text">
 									<div class="card" style="margin-bottom: 2px;">
 										<img class="card-img-top" src="{{ url_for('static',filename='images/fysikkheader.png') }}" style="height: 143.2px;" alt="Card image cap">
@@ -132,6 +135,7 @@
 										</div>
 									  </div>									
 								</div>
+								<!--Card 7-->
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 normal-text">
 									<div class="card" style="margin-bottom: 2px;">
 										<img class="card-img-top" src="{{ url_for('static',filename='images/sensorheader.png') }}" style="height: 143.2px;" alt="Card image cap">
@@ -142,6 +146,7 @@
 										</div>
 									  </div>									
 								</div>
+								<!--Card 8-->
 								<div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 normal-text">
 									<div class="card" style="margin-bottom: 2px;">
 										<img class="card-img-top" src="{{ url_for('static',filename='images/edcheader.png') }}" style="height: 143.2px;" alt="Card image cap">
