--- a/templates/tenman/navbar.html
+++ b/templates/tenman/navbar.html
@@ -39,7 +39,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-    <a class="navbar-brand" href="/"><!-- Logo Image -->
+    <a class="navbar-brand" href="/tenman"><!-- Logo Image -->
       <img src="{{ url_for('static',filename='images/tenman.png') }}" width="45" alt="" class="d-inline-block align-middle mr-2">
       <!-- Logo Text -->
       <span class="font-weight-bold">Tenman Tracker</span></a>
@@ -50,7 +50,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/tenman">Home <span class="sr-only">(current)</span></a>
         </li>
         
         <li class="nav-item">
