--- a/templates/tenman/tenman_landing.html
+++ b/templates/tenman/tenman_landing.html
@@ -7,7 +7,24 @@
 
 <div class="container">
   <h3>Tenman 4 ever boys!</h3>
-</div>
 
+
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <strong>Success!</strong> {{ message }}
+        </div>
+          
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+</div>
   {% endblock %}
   </html>
