Add display of top players to tenman page

--- a/templates/tenman/navbar.html
+++ b/templates/tenman/navbar.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <title>Tenman Tracker</title>
     <link rel="icon" href="{{ url_for('static',filename='images/tenman.png') }}">
   </head>
@@ -68,7 +68,7 @@
       <!--<form class="form-inline my-2 my-lg-0">-->
         <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
        <button class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#modal_work" type="submit">Add Match</button>
-       <a class="nav-link" href="https://github.com/jakvah/tenmen-tracker"><i class="fa fa-github fa-lg"></i></a>
+       <a class="nav-link" href="https://github.com/jakvah/tenmen-tracker"><i class="fab fa-github fa-lg"></i></a>
        
       <!-- </form>-->
     </div>
