--- a/templates/tenman/navbar.html
+++ b/templates/tenman/navbar.html
@@ -86,6 +86,7 @@
         </button>
         </div>
         <div class="modal-body">
+          <p><i>Note that adding a match might take a couple of seconds. Be patient!</i></p>
           <form action="/tenman/add_match" method="POST">
             <div class="form-group">
               <label for="exampleInputEmail1">Match ID</label>
