--- a/templates/tenman/tenman_landing.html
+++ b/templates/tenman/tenman_landing.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <meta charset="UTF-8">
+  <title>Home / Tenman Tracker</title>
 <!-- Remove this head tag in depolyment-->
 
 
@@ -10,7 +11,7 @@
 <!-- Alert for adding match-->
 <div class="container">
   <h3 style="padding-top: 5px;">Tenman 4 ever boys!</h3>
-  <h5>Recorded a total of {{num_matches}} matches and {{num_players}} players.</h5>
+  <h6>Recorded a total of {{num_matches}} matches and {{num_players}} players.<span id="clickableIcon"><i class="fa fa-info-circle fa-sm" style="padding-left:3px;" data-toggle="modal" data-target="#myModal"></i></span></h6>
 {% with messages = get_flashed_messages() %}
   {% if messages %}
     <ul class=flashes>
@@ -33,37 +34,39 @@
   <div class="row">
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4">
     <div class="card" style="width: 16rem; margin:7px;">
-    <img src="{{top_players[1].get_img_url()}}" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title"><span class="badge badge-info">2nd</span>{{(top_players[1].get_nick()).decode("utf-8")}}</h5>
-      <p class="card-text">
-        <li class="list-group-item"><i class="fa fa-chart-line fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_hltv_rating()}} HLTV-Rating</strong></li>
-        <li class="list-group-item"><i class="fa fa-bullseye fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_kills()}} Kills</strong></li>
-        <li class="list-group-item"><i class="fa fa-skull fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_deaths()}} Deaths</strong></li>
-        <li class="list-group-item"><i class="fa fa-percentage fa-lg" style="padding-right:3px;"></i><strong>{{100*(top_players[1].get_hs_percentage())}} Headshot %</strong></li>
-        <li class="list-group-item"><i class="fa fa-radiation-alt fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_adr()}} ADR</strong></li>
-        <li class="list-group-item"><i class="fa fa-medal fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_wins()}} Wins</strong></li>
-        <li class="list-group-item"><i class="fa fa-minus-square fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_losses()}} Losses</strong></li>
-      </p>
-      <a href="#" class="btn btn-primary "><i class="fa fa-user" style="padding-right:3px;"></i>See player profile</a>
-    </div>
-  </div>
-  </div>
-  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4">
-    <div class="card" style="width: 16rem; margin:7px;">
     <img src="{{top_players[0].get_img_url()}}" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title"><span class="badge badge-info">1st</span>{{(top_players[0].get_nick()).decode("utf-8")}}<i class="fa fa-trophy"></i></h5>
-      <p class="card-text">        
-        <li class="list-group-item"><i class="fa fa-chart-line fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_hltv_rating()}} HLTV-Rating</strong></li>
-        <li class="list-group-item"><i class="fa fa-bullseye fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_kills()}} Kills</strong></li>
+      <h5 class="card-title"><span class="badge badge-info" style="margin-right: 5px;">1st</span>{{(top_players[0].get_nick()).decode("utf-8")}}<i class="fa fa-trophy" style="padding-left:3px;"></i></h5>
+      <p class="card-text">
+        <li class="list-group-item"><i class="fa fa-divide fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_kd_ratio()}} K/D Ratio</strong></li>
+        <li class="list-group-item"><i class="fa fa-crosshairs fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_kills()}} Kills</strong></li>
         <li class="list-group-item"><i class="fa fa-skull fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_deaths()}} Deaths</strong></li>
+        <li class="list-group-item"><i class="fa fa-chart-line fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_hltv_rating()}} HLTV-Rating</strong></li>
         <li class="list-group-item"><i class="fa fa-percentage fa-lg" style="padding-right:3px;"></i><strong>{{100*(top_players[0].get_hs_percentage())}} Headshot %</strong></li>
         <li class="list-group-item"><i class="fa fa-radiation-alt fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_adr()}} ADR</strong></li>
         <li class="list-group-item"><i class="fa fa-medal fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_wins()}} Wins</strong></li>
         <li class="list-group-item"><i class="fa fa-minus-square fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_losses()}} Losses</strong></li>
       </p>
-      <a href="#" class="btn btn-primary"><i class="fa fa-user" style="padding-right:3px;"></i>See player profile</a>
+      <a href="/tenman/user/{{top_players[0].get_pop_id()}}" class="btn btn-primary "><i class="fa fa-user" style="padding-right:3px;"></i>See player profile</a>
+    </div>
+  </div>
+  </div>
+  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4">
+    <div class="card" style="width: 16rem; margin:7px;">
+    <img src="{{top_players[1].get_img_url()}}" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title"><span class="badge badge-info" style="margin-right: 5px;">2nd</span>{{(top_players[1].get_nick()).decode("utf-8")}}</h5>
+      <p class="card-text">        
+        <li class="list-group-item"><i class="fa fa-divide fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_kd_ratio()}} K/D Ratio</strong></li>
+        <li class="list-group-item"><i class="fa fa-crosshairs fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_kills()}} Kills</strong></li>
+        <li class="list-group-item"><i class="fa fa-skull fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_deaths()}} Deaths</strong></li>
+        <li class="list-group-item"><i class="fa fa-chart-line fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_hltv_rating()}} HLTV-Rating</strong></li>
+        <li class="list-group-item"><i class="fa fa-percentage fa-lg" style="padding-right:3px;"></i><strong>{{100*(top_players[1].get_hs_percentage())}} Headshot %</strong></li>
+        <li class="list-group-item"><i class="fa fa-radiation-alt fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_adr()}} ADR</strong></li>
+        <li class="list-group-item"><i class="fa fa-medal fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_wins()}} Wins</strong></li>
+        <li class="list-group-item"><i class="fa fa-minus-square fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_losses()}} Losses</strong></li>
+      </p>
+      <a href="/tenman/user/{{top_players[0].get_pop_id()}}" class="btn btn-primary"><i class="fa fa-user" style="padding-right:3px;"></i>See player profile</a>
     </div>
   </div>
   </div>
@@ -72,17 +75,18 @@
     <div class="card" style="width: 16rem; margin:7px;">
     <img src="{{top_players[2].get_img_url()}}" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title"><span class="badge badge-info">3rd</span>{{(top_players[2].get_nick()).decode("utf-8")}}</h5>
+      <h5 class="card-title"><span class="badge badge-info" style="margin-right: 5px;">3rd</span>{{(top_players[2].get_nick()).decode("utf-8")}}</h5>
       <p class="card-text">        
-        <li class="list-group-item"><i class="fa fa-chart-line fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_hltv_rating()}} HLTV-Rating</strong></li>
-        <li class="list-group-item"><i class="fa fa-bullseye fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_kills()}} Kills</strong></li>
+        <li class="list-group-item"><i class="fa fa-divide fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_kd_ratio()}} K/D Ratio</strong></li>
+        <li class="list-group-item"><i class="fa fa-crosshairs fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_kills()}} Kills</strong></li>
         <li class="list-group-item"><i class="fa fa-skull fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_deaths()}} Deaths</strong></li>
+        <li class="list-group-item"><i class="fa fa-chart-line fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_hltv_rating()}} HLTV-Rating</strong></li>
         <li class="list-group-item"><i class="fa fa-percentage fa-lg" style="padding-right:3px;"></i><strong>{{100*(top_players[2].get_hs_percentage())}} Headshot %</strong></li>
         <li class="list-group-item"><i class="fa fa-radiation-alt fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_adr()}} ADR</strong></li>
         <li class="list-group-item"><i class="fa fa-medal fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_wins()}} Wins</strong></li>
         <li class="list-group-item"><i class="fa fa-minus-square fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_losses()}} Losses</strong></li>
       </p>
-      <a href="#" class="btn btn-primary"><i class="fa fa-user" style="padding-right:3px;"></i>See player profile</a>
+      <a href="/tenman/user/{{top_players[2].get_pop_id()}}" class="btn btn-primary"><i class="fa fa-user" style="padding-right:3px;"></i>See player profile</a>
     </div>
   </div>
   </div>
@@ -96,11 +100,12 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col">IGN</th>
-        <th scope="col">HLTV</th>
+        <th scope="col">K/D</th>
         <th scope="col">K</th>
         <th scope="col">A</th>
         <th scope="col">D</th>
         <th scope="col">ADR</th>
+        <th scope="col">HLTV</th>
         <th scope="col">HS%</th>
         <th scope="col">W</th>
         <th scope="col">L</th>
@@ -111,12 +116,13 @@
       {% for i in range((top_players[3:]).__len__()) %}
       <tr>
         <th scope="row">{{ i+4 }}</th>
-        <td><img src="{{ top_players[3+i].get_img_url() }}" alt="" height="20" width="20" style="margin-right: 3px;;"/>{{(top_players[3+i].get_nick()).decode("utf-8") }}</td>
-        <td>{{ top_players[3+i].get_hltv_rating() }}</td>
+        <td><img src="{{ top_players[3+i].get_img_url() }}" alt="" height="20" width="20" style="margin-right: 3px;;"/><a href="/tenman/user/{{top_players[3+i].get_pop_id()}}">{{(top_players[3+i].get_nick()).decode("utf-8") }}</a></td>
+        <td>{{ top_players[3+i].get_kd_ratio() }}</td>
         <td>{{ top_players[3+i].get_kills() }}</td>
         <td>{{ top_players[3+i].get_assists() }}</td>
         <td>{{ top_players[3+i].get_deaths() }}</td>
         <td>{{ top_players[3+i].get_adr() }}</td>
+        <td>{{ top_players[3+i].get_hltv_rating() }}</td>
         <td>{{ 100*(top_players[3+i].get_hs_percentage())}}%</td>
         <td>{{top_players[3+i].get_wins()}}</td>
         <td>{{top_players[3+i].get_losses()}}</td>
@@ -127,7 +133,38 @@
   </table>
 </div> 
 
+<!-- Info about data recording modal-->
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">What data is beeing recorded and displayed?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>The data beeing recorded are from the PopFlash matches that have been added to the database. The values displayed on the scoreboard and 
+        on a players profile is the average over all matches. To keep the scoreboard statistically significant, a player must have 5 matches recorded in order
+        to appear on the scoreboard. As a consquence, the total number of players might not match the players that appear on the scoreboard.</p>
+        <p>The scoreboard is sorted by players K/D Ratios. This decision is based on the fact that this is how real men measure CSGO stats. Those claiming 
+          that a players HLTV rating has any significance are falling into the trap of the liberal media (beeing HTLV.org). If you have a problem with this, then bait
+          your team harder. Enough said.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Info about data recordin modal-->
 
+<style>
+  #clickableIcon {
+        cursor: pointer
 
+    }
+</style>
   {% endblock %}
   </html>
