--- a/templates/tenman/tenman_landing.html
+++ b/templates/tenman/tenman_landing.html
@@ -36,7 +36,7 @@
     <div class="card" style="width: 16rem; margin:7px;">
     <img src="{{top_players[0].get_img_url()}}" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title"><span class="badge badge-info" style="margin-right: 5px;">1st</span>{{(top_players[0].get_nick()).decode("utf-8")}}<i class="fa fa-trophy" style="padding-left:3px;"></i></h5>
+      <h5 class="card-title"><span class="badge badge-info" style="margin-right: 5px;">1st</span>{{top_players[0].get_nick()}}<i class="fa fa-trophy" style="padding-left:3px;"></i></h5>
       <p class="card-text">
         <li class="list-group-item"><i class="fa fa-divide fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_kd_ratio()}} K/D Ratio</strong></li>
         <li class="list-group-item"><i class="fa fa-crosshairs fa-lg" style="padding-right:3px;"></i><strong>{{top_players[0].get_kills()}} Kills</strong></li>
@@ -55,7 +55,7 @@
     <div class="card" style="width: 16rem; margin:7px;">
     <img src="{{top_players[1].get_img_url()}}" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title"><span class="badge badge-info" style="margin-right: 5px;">2nd</span>{{(top_players[1].get_nick()).decode("utf-8")}}</h5>
+      <h5 class="card-title"><span class="badge badge-info" style="margin-right: 5px;">2nd</span>{{top_players[1].get_nick()}}</h5>
       <p class="card-text">        
         <li class="list-group-item"><i class="fa fa-divide fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_kd_ratio()}} K/D Ratio</strong></li>
         <li class="list-group-item"><i class="fa fa-crosshairs fa-lg" style="padding-right:3px;"></i><strong>{{top_players[1].get_kills()}} Kills</strong></li>
@@ -75,7 +75,7 @@
     <div class="card" style="width: 16rem; margin:7px;">
     <img src="{{top_players[2].get_img_url()}}" class="card-img-top" alt="...">
     <div class="card-body">
-      <h5 class="card-title"><span class="badge badge-info" style="margin-right: 5px;">3rd</span>{{(top_players[2].get_nick()).decode("utf-8")}}</h5>
+      <h5 class="card-title"><span class="badge badge-info" style="margin-right: 5px;">3rd</span>{{top_players[2].get_nick()}}</h5>
       <p class="card-text">        
         <li class="list-group-item"><i class="fa fa-divide fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_kd_ratio()}} K/D Ratio</strong></li>
         <li class="list-group-item"><i class="fa fa-crosshairs fa-lg" style="padding-right:3px;"></i><strong>{{top_players[2].get_kills()}} Kills</strong></li>
@@ -113,10 +113,10 @@
       </tr>
     </thead>
     <tbody>
-      {% for i in range((top_players[3:]).__len__()) %}
+      {% for i in range((top_players[3:]).__len__()-1) %}
       <tr>
         <th scope="row">{{ i+4 }}</th>
-        <td><img src="{{ top_players[3+i].get_img_url() }}" alt="" height="20" width="20" style="margin-right: 3px;;"/><a href="/tenman/user/{{top_players[3+i].get_pop_id()}}">{{(top_players[3+i].get_nick()).decode("utf-8") }}</a></td>
+        <td><img src="{{ top_players[3+i].get_img_url() }}" alt="" height="20" width="20" style="margin-right: 3px;;"/><a href="/tenman/user/{{top_players[3+i].get_pop_id()}}">{{ top_players[3+i].get_nick() }}</a></td>
         <td>{{ top_players[3+i].get_kd_ratio() }}</td>
         <td>{{ top_players[3+i].get_kills() }}</td>
         <td>{{ top_players[3+i].get_assists() }}</td>
